--- a/package.json
+++ b/package.json
@@ -1,27 +1,79 @@
 {
-  "name": "frontend_ts",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+	"name": "frontend_ts",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettify": "npx prettier . --write"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-accordion": "^1.1.2",
+		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-menubar": "^1.0.4",
+		"@radix-ui/react-navigation-menu": "^1.1.4",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-radio-group": "^1.1.3",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-separator": "^1.0.3",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-toggle": "^1.0.3",
+		"@radix-ui/react-tooltip": "^1.0.7",
+		"@reduxjs/toolkit": "^2.0.1",
+		"@tanstack/react-query": "^5.17.15",
+		"@tanstack/react-query-devtools": "^5.17.18",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"cmdk": "^0.2.0",
+		"cookies": "^0.9.1",
+		"date-fns": "^3.3.1",
+		"dompurify": "^3.0.8",
+		"dotenv": "^16.3.2",
+		"formidable": "^3.5.1",
+		"http-proxy": "^1.18.1",
+		"lucide-react": "^0.312.0",
+		"next": "14.1.0",
+		"next-auth": "^4.24.5",
+		"react": "^18",
+		"react-day-picker": "^8.10.0",
+		"react-dom": "^18",
+		"react-hook-form": "^7.49.3",
+		"react-image-crop": "^11.0.5",
+		"react-redux": "^9.1.0",
+		"sharp": "^0.33.2",
+		"socket.io": "^4.7.4",
+		"socket.io-client": "^4.7.4",
+		"tailwind-merge": "^2.2.0",
+		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^9.0.1",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/cookies": "^0.9.0",
+		"@types/formidable": "^3.4.5",
+		"@types/http-proxy": "^1.17.14",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"postcss": "^8",
+		"prettier": "^3.2.4",
+		"prettier-plugin-tailwindcss": "^0.5.11",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
