--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prettify": "npx prettier . --write"
+		"prettify": "npx prettier . --write",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
@@ -62,6 +63,9 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.2",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/cookies": "^0.9.0",
 		"@types/formidable": "^3.4.5",
 		"@types/http-proxy": "^1.17.14",
@@ -69,15 +73,19 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@types/uuid": "^9.0.8",
+		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
+		"jsdom": "^24.0.0",
+		"msw": "^2.2.10",
 		"postcss": "^8",
 		"prettier": "^3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
+		"typescript": "^5",
+		"vitest": "^1.4.0"
 	}
 }
