--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"date-fns": "^3.3.1",
 		"dompurify": "^3.0.8",
 		"dotenv": "^16.3.2",
+		"file-type": "^19.0.0",
 		"formidable": "^3.5.1",
 		"framer-motion": "^11.0.6",
 		"http-proxy": "^1.18.1",
